# Compiler8080

./: .flooignore  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  main.cpp
Lexer/include/: Preprocessor.h  Scanner.h  token_types.h  utility_functions.h
Lexer/src/: Preprocessor.cpp  Scanner.cpp  Scanner.h  utility_functions.cpp
Parser/include/: ast_type.h  node.h  parser.h
Parser/src/: node.cpp  parser.cpp
resources/: hello_stuff.h  hello_world.c  input_file.c
tests/: hello_stuff.h  hello_world.c  testlexingroutine.cpp
